@@ -29,7 +29,6 @@
   footno = "[" >X %A digit+ %T "]" ;
 
   # markup
-  begin_markup_phrase = " "? >A %{ STORE(beginning_space); };
   end_markup_phrase = (" " | PUNCT | EOF | LF) @{ fhold; };
   code = "["? "@" >X mtext >A %T :> "@" "]"? ;
   code_tag_start = "<code" [^>]* ">" ;
@@ -45,10 +44,11 @@
   del_phrase = (( " " >A %{ STORE(beginning_space); } "-") >X C ( mtext ) >A %T :>> ( "-" end_markup_phrase )) - emdash_parenthetical_phrase_with_spaces ;
   ins = "["? "+" >X mtext >A %T :> "+" "]"? ;
   sup = "[^" >X mtext >A %T :> "^]" ;
-  sup_phrase = ( begin_markup_phrase "^") >X C ( mtext ) >A %T :>> ( "^" end_markup_phrase ) ;
+  sup_phrase = ( "^" when starts_phrase) >X C ( mtext ) >A %T :>> ( "^" end_markup_phrase ) ;
   sub = "[~" >X mtext >A %T :> "~]" ;
-  sub_phrase = ( begin_markup_phrase "~") >X C ( mtext ) >A %T :>> ( "~" end_markup_phrase ) ;
-  span = "["? "%" >X mtext >A %T :> "%" "]"? ;
+  sub_phrase = ( "~" when starts_phrase) >X C ( mtext ) >A %T :>> ( "~" end_markup_phrase ) ;
+  span = "[%" >X mtext >A %T :> "%]" ;
+  span_phrase = (("%" when starts_phrase) >X ( mtext ) >A %T :>> ( "%" end_markup_phrase )) ;
   cite = "["? "??" >X mtext >A %T :> "??" "]"? ;
   ignore = "["? "==" >X %A mtext %T :> "==" "]"? ;
   snip = "["? "```" >X %A mtext %T :> "```" "]"? ;
@@ -113,6 +113,7 @@
     sub { PARSE_ATTR(text); PASS(block, text, sub); };
     sub_phrase { PARSE_ATTR(text); PASS(block, text, sub_phrase); };
     span { PARSE_ATTR(text); PASS(block, text, span); };
+    span_phrase { PARSE_ATTR(text); PASS(block, text, span_phrase); };
     cite { PARSE_ATTR(text); PASS(block, text, cite); };
     ignore => ignore;
     snip { PASS(block, text, snip); };
@@ -249,6 +250,7 @@ redcloth_inline(self, p, pe, refs)
 {
   int cs, act;
   char *ts, *te, *reg, *eof;
+  char *orig_p = p, *orig_pe = pe;
   VALUE block = rb_str_new2("");
   VALUE regs = Qnil;
   unsigned int opts = 0;
