@@ -34,8 +34,8 @@ module RedCloth::Formatters
       RedCloth::VERSION::STRING
     end
     
-    [:del_phrase, :sup_phrase, :sub_phrase].each do |phrase_method|
-      method = phrase_method.to_s[0..2]
+    [:del_phrase, :sup_phrase, :sub_phrase, :span_phrase].each do |phrase_method|
+      method = phrase_method.to_s.split('_')[0]
       define_method(phrase_method) do |opts|
         "#{opts[:beginning_space]}#{self.send(method, opts)}"
       end
